microservices/real-estate/iac/k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oya-real-estate
  labels:
    app: oya-real-estate
    sap-code: "RE-FX"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: oya-real-estate
  template:
    metadata:
      labels:
        app: oya-real-estate
    spec:
      containers:
        - name: service
          image: registry.example/oya-real-estate:0.1.0
          ports:
            - name: h3
              containerPort: 8443
