microservices/real-estate/iac/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: oya-real-estate-default-deny
spec:
  podSelector:
    matchLabels:
      app: oya-real-estate
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              oya-ingress: "true"
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              oya-substrate: "true"
